add list elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h3  {
     color: crimson;
 }
 body  {
-    background-color: purple;
+    background-color: lavender;
 }
 .tropical  {
     color: violet;
